2007-03-06 13:39  pete

	* org/amnh/cbc/geographicDistanceMatrixGenerator/GeographicDistanceMatrixGeneratorGUI.java,
	  org/amnh/cbc/perpendicularDistanceCalculator/PerpendicularDistanceCalculatorGui.java,
	  resources/SplashScreenGraphic-GDMG.jpg,
	  resources/SplashScreenGraphic-PDC.jpg: -Small bug fix. Wrong URL
	  version checking

2007-03-02 20:57  pete

	* ChangeLog: -Added changelog

2007-03-02 14:18  pete

	* ., resources/SplashScreenGraphic-GDMG.jpg,
	  resources/SplashScreenGraphic-PDC.jpg: -Updated splash screens

2007-03-01 22:07  pete

	* org/amnh/cbc/geographicDistanceMatrixGenerator/GeographicDistanceMatrixGeneratorGUI.java:
	  -Added export feature to GDMG

2007-03-01 21:37  pete

	* org/amnh/cbc/perpendicularDistanceCalculator/About.java: -Updated
	  about dialogs for the GDMG

2007-03-01 21:15  pete

	* org/amnh/cbc/core/VersionCheck.java,
	  org/amnh/cbc/geographicDistanceMatrixGenerator/About.java,
	  org/amnh/cbc/perpendicularDistanceCalculator/About.java: -Updated
	  the version reporting class for better output display
	  -Updated about dialogs for both the PDC and GDMG

2007-03-01 15:43  pete

	* org/amnh/cbc/geographicDistanceMatrixGenerator/GeographicDistanceMatrixGeneratorEngine.java,
	  org/amnh/cbc/geographicDistanceMatrixGenerator/GeographicDistanceMatrixGeneratorGUI.java,
	  org/amnh/cbc/geographicDistanceMatrixGenerator/LocationRecord.java:
	  -Removed StringTokenizerClass -Parse location records once on
	  load rather than each time the matrix is built (major speed
	  boost) -Added the equivalent of a LocationRecord struct to hold
	  all location information
	  GeographicDistanceMatrixGeneratorEngine.java
	  GeographicDistanceMatrixGeneratorGUI.java LocationRecord.java

2007-02-07 15:37  pete

	* org/amnh/cbc/geographicDistanceMatrixGenerator/GeographicDistanceMatrixGeneratorGUI.java:
	  Added about menu item

2007-02-07 15:32  pete

	* org/amnh/cbc/core/SimpleFileFilter.java,