@@ -2,7 +2,6 @@
 ** File: GeographicDistanceMatrixGeneratorGUI.java
 ** Author: Peter J. Ersts (ersts@amnh.org)
 ** Creation Date: 2007-02-07
-** Revision Date: 2007-03-01
 **
 ** Copyright (c) 2007, American Museum of Natural History. All rights reserved.
 ** 
@@ -81,7 +80,7 @@ public class GeographicDistanceMatrixGeneratorGUI extends JFrame implements Acti
 	private static final long serialVersionUID = 9133569752162494909L;
 
 	/* Current Version Number */
-	private static final String version = "1.2.1";
+	private static final String version = "1.2.2";
 	
 	/** \brief Instance of the VersionCheck class */
 	private VersionCheck versionCheck;
@@ -136,7 +135,7 @@ public class GeographicDistanceMatrixGeneratorGUI extends JFrame implements Acti
 		Thread splashThread = new Thread(SS, "SplashThread");
         splashThread.start();
         
-        versionCheck = new VersionCheck(this, version, "http://geospatial.amnh.org/open_source/gdmg/version.php?query=true", "http://geospatial.amnh.org/open_source/gdmg/download.php", 4000);
+        versionCheck = new VersionCheck(this, version, "http://biodiversityinformatics.amnh.org/open_source/gdmg/version.php?query=true", "http://biodiversityinformatics.amnh.org/open_source/gdmg/download.php", 4000);
         Thread versionThread = new Thread(versionCheck, "VersionThread");
         versionThread.start();
         
