@@ -2,7 +2,6 @@
 ** File: PerpepndicularDistanceCalculatorGui.java
 ** Author: Peter J. Ersts (ersts@amnh.org)
 ** Creation Date: 2004-10-10
-** Revision Date: 2007-02-06
 **
 ** Copyright (c) 2004,2005 American Museum of Natural History. All rights reserved.
 ** 
@@ -72,7 +71,7 @@ public class PerpendicularDistanceCalculatorGui extends JFrame implements Action
 	private static final long serialVersionUID = 2032448473434530299L;
 
 	/* Current Version Number */
-	private static final String version = "1.2.1";
+	private static final String version = "1.2.2";
 
 	/** \brief Instance of the VersionCheck class */
 	private VersionCheck versionCheck;
@@ -127,7 +126,7 @@ public class PerpendicularDistanceCalculatorGui extends JFrame implements Action
         Thread splashThread = new Thread(SS, "SplashThread");
         splashThread.start();
         
-        versionCheck = new VersionCheck(this, version, "http://geospatial.amnh.org/open_source/pdc/version.php?query=true", "http://geospatial.amnh.org/open_source/pdc/download.php", 4000);
+        versionCheck = new VersionCheck(this, version, "http://biodiversityinformatics.amnh.org/open_source/pdc/version.php?query=true", "http://biodiversityinformatics.amnh.org/open_source/pdc/download.php", 4000);
         Thread versionThread = new Thread(versionCheck, "VersionThread");
         versionThread.start();
 		
